2002-01-04  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Widgets/MiniScroll.c (EvtMouseMiniScroll):
	implement auto repeat delay, this fixes duplication

	* FvwmScript/Scripts/FvwmScript-Date:
	change the maximal possible year from 1999 to 2037

2001-12-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/Widgets/PopupMenu.c (EvtMousePopupMenu):
	* FvwmScript/Widgets/Menu.c (EvtMouseMenu):
	Pointer was warped to other screen with a dual head setup

2001-12-19  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Instructions.c (FuncSendMsgAndGet):
	Be more safe

2001-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (DispatchEvent):
	allow other buttons/modifiers when dragging the viewport with button 3

2001-11-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (set_shape):
	fixed *FvwmIconMan*shaped option whit empty managers

001-10-28  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/FvwmScript.c:
	* FvwmScript/FvwmScript.1:
	* FvwmScript/script.y:
	* FvwmScript/scanner.l:
	* FvwmScript/script.c:
	* FvwmScript/scanner.c:
	* FvwmScript/types.h:
	* FvwmScript/Widgets/Tools.{c,h}:
	* FvwmScript/Widgets/ItemDraw.c:
	* FvwmScript/Widgets/Menu.c:
	* FvwmScript/Widgets/PopupMenu.c:
	* FvwmScript/Widgets/PushButton.c:
	* FvwmScript/Widgets/List.c:
	New flags Left, Right and Center for text position.
	Some code aeration.

2001-10-26  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.1:
	* FvwmForm/ReadXServer.c (ReadXServer): Allow for ISO_Left_Tab.
	Ctrl-p,Ctrl-f, arrow up, down do something useful in forms with 1
	input field.

2001-10-21  Dan Espen  <dane@mk.telcordia.com>

	* FvwmScript/FvwmScript.1: fixups.

2001-10-19  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Instruction.c:
	* FvwmScript/FvwmScript.c:
	* FvwmScript/FvwmScript.1:
	* FvwmScript/script.y:
	* FvwmScript/scanner.l:
	* FvwmScript/script.c:
	* FvwmScript/scanner.c:
	* FvwmScript/types.h
	New bloc QuitFunc (bloc executed at exit), new instruction Key