@@ -1,3 +1,9 @@
+2002-01-04  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
+	Eat up excess Expose events
+	Fixed resizing an AutoHide TaskBar
+
 2002-01-04  Mikhael Goikhman  <migo@homemail.com>
 
 	* FvwmScript/Widgets/MiniScroll.c (EvtMouseMiniScroll):
